--- a/styles/main.scss
+++ b/styles/main.scss
@@ -54,13 +54,12 @@
   }
 }
 
-// .card-contact{
-//   .contact-map{
-//     width: 520px;
-//     height: 460px;
-//     border-radius: 0 5px 5px 0;    
-//   }
-// }
-
+.konten-berita{
+  .thumb-post{
+    background-size: cover;
+    background-color: #8f8f8f;
+    display: block;
+  }
+}
 
 
