--- a/styles/main.css
+++ b/styles/main.css
@@ -43,4 +43,10 @@
 }
 .footer-link :hover {
   color: blue;
+}
+
+.konten-berita .thumb-post {
+  background-size: cover;
+  background-color: #8f8f8f;
+  display: block;
 }/*# sourceMappingURL=main.css.map */
