--- a/styles/main.css
+++ b/styles/main.css
@@ -48,5 +48,19 @@
 .konten-berita .thumb-post {
   background-size: cover;
   background-color: #8f8f8f;
-  display: block;
+  min-height: 399px;
+}
+
+.form-signin .form-floating {
+  z-index: 2;
+}
+.form-signin .form-floating .input-email {
+  margin-bottom: 1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin .form-floating .input-password {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }/*# sourceMappingURL=main.css.map */
