--- a/styles/main.scss
+++ b/styles/main.scss
@@ -58,8 +58,22 @@
   .thumb-post{
     background-size: cover;
     background-color: #8f8f8f;
-    display: block;
+    min-height: 399px;
   }
 }
 
-
+.form-signin{
+  .form-floating{
+    z-index:2;
+    .input-email {
+      margin-bottom: 1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0; 
+    }
+    .input-password{
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+  }
+}
